@@ -9,23 +9,23 @@ import java.util.UUID;
 
 public class ForgeEssentialsEconHandler implements IEconHandler {
     @Override
-    public long getBalance(UUID uuid) {
+    public long getBalance(UUID uuid, Boolean isPlayer) {
         return APIRegistry.economy.getWallet(UserIdent.get(uuid)).get();
     }
 
     @Override
-    public boolean addToBalance(UUID uuid, long amount, boolean showMsg) {
+    public boolean addToBalance(UUID uuid, long amount, Boolean isPlayer) {
         APIRegistry.economy.getWallet(UserIdent.get(uuid)).add(amount);
         return true;
     }
 
     @Override
-    public boolean takeFromBalance(UUID uuid, long amount, boolean showMsg) {
+    public boolean takeFromBalance(UUID uuid, long amount, Boolean isPlayer) {
         return APIRegistry.economy.getWallet(UserIdent.get(uuid)).withdraw(amount);
     }
 
     @Override
-    public boolean setBalance(UUID uuid, long amount, boolean showMsg) {
+    public boolean setBalance(UUID uuid, long amount, Boolean isPlayer) {
         APIRegistry.economy.getWallet(UserIdent.get(uuid)).set(amount);
         return true;
     }
@@ -36,12 +36,17 @@ public class ForgeEssentialsEconHandler implements IEconHandler {
     }
 
     @Override
-    public boolean ensureAccountExists(UUID uuid) {
+    public String toString(long amount) {
+        return APIRegistry.economy.toString(amount);
+    }
+
+    @Override
+    public boolean ensureAccountExists(UUID uuid, Boolean isPlayer) {
         return APIRegistry.economy.getWallet(UserIdent.get(uuid)) != null;
     }
 
     @Override
-    public Boolean forceSave(UUID uuid) {
+    public Boolean forceSave(UUID uuid, Boolean isPlayer) {
         return null;
     }
 
